--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <meta name="description" content="Esto es un ex de gama de colores">
+    <title>Gama Colores</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div>text 1</div>
+        <div>text 2</div>
+        <div>text 3</div>
+        <div>text 4</div>
+        <div>text 5</div>
+    </div>
 </body>
 </html>
