Girando el texto 180grados

--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
 </head>
 <body>
     <div class="container">
-        <div>text 1</div>
-        <div>text 2</div>
-        <div>text 3</div>
-        <div>text 4</div>
-        <div>text 5</div>
+        <div>
+           <p>text 1</p> 
+        </div>
+        <div>
+            <p>text 2</p>
+        </div>
+        <div>
+            <p>text 2</p>
+        </div>
+        <div>
+            <p>text 2</p>
+        </div>
+        <div>
+            <p>text 2</p>
+        </div>
     </div>
 </body>
 </html>
